fix bookmarks z-index issue

--- a/css/includes/components/_saved-searches.scss
+++ b/css/includes/components/_saved-searches.scss
@@ -14,7 +14,7 @@
 
    &.pinned {
       position: sticky;
-      z-index: 1020;
+      z-index: 1010;
       top: calc(#{$navbar-height} - 1px);
       margin-top: calc(-#{$content-padding-y} - 1px);
       height: calc(100vh - #{$navbar-height});
